kubernetes/applications/plant-it/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantit-server
  namespace: apps
  labels:
    app: plantit-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plantit-server
  template:
    metadata:
      labels:
        app: plantit-server
    spec:
      containers:
        - name: server
          image: msdeluise/plant-it-server:latest
          ports:
            - containerPort: 8080
            - containerPort: 3000
