kubernetes/applications/plant-it/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantit-server
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: plantit-server
  ports:
    - name: api
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: app
      protocol: TCP
      port: 3000
      targetPort: 3000
