kubernetes/applications/plant-it/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plantit-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plants.mcmumf.dev
        - plants-api.mcmumf.dev
      secretName: plants.mcmumf.dev-tls
  rules:
    - host: plants.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plantit-server
                port:
                  number: 3000
    - host: plants-api.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plantit-server
                port:
                  number: 8080
